Q4K: Add matcher to middleware. Add initials to user avatar

--- a/packages/ui/src/components/avatar/Avatar.mdx
+++ b/packages/ui/src/components/avatar/Avatar.mdx
@@ -1,11 +1,11 @@
 # Avatar
 
-Опис компонента Avatar та його використання.
+Description of the Avatar component and its usage.
 
-## Приклади
+## Examples
 
 ```jsx
-import { Avatar } from './Avatar';
+import { Avatar } from "./Avatar";
 
-<Avatar>Контент</Avatar>
+<Avatar>Content</Avatar>;
 ```
